feat:add gpt-5.2 model

--- a/src/lib/i18n/locales/en-US/translation.json
+++ b/src/lib/i18n/locales/en-US/translation.json
@@ -345,7 +345,7 @@
   "NEW DBC WALLET": "",
   "NEW DGC WALLET": "",
   "New Password": "",
-  "Password must be at least 8 characters long.":"",
+  "Password must be at least 8 characters long.": "",
   "No results found": "",
   "No source available": "",
   "Not factually correct": "",
@@ -714,7 +714,7 @@
   "Strong writing ability, high stability": "",
   "Multimodal graphics and text, reasoning enhancement": "",
   "Using advanced reasoning": "",
-  "Good at fast coding and analysis": "",
+  "Good at fast coding and analysis": "Excellent logic & coding, precise long-text handling, reliable content",
   "Skilled in writing and generating ideas": "",
   "Strong general capabilities, stable writing": "",
   "Strongest in coding, suitable for complex tasks": "",
@@ -773,7 +773,7 @@
   "II. Referral Reward": "",
   "Wallet users who have completed KYC invite others to create wallets and complete KYC.": "",
   "The number of people invited each day should not exceed {{ipeoples}}.": "",
-  "For every person invited, and if the invited person signs in continuously for three times, the inviter will receive a reward of <span style='color: rgba(184, 142, 86, 1);'>{{invite}}</span> DGC, The deadline for the activity is {{endtime}}.":"",
+  "For every person invited, and if the invited person signs in continuously for three times, the inviter will receive a reward of <span style='color: rgba(184, 142, 86, 1);'>{{invite}}</span> DGC, The deadline for the activity is {{endtime}}.": "",
   "III. Clock in Reward": "",
   "Check in reward is valid for <span style='color: rgba(184, 142, 86, 1);'>{{civalid}}</span> days after authentication is completed.": "",
   "Logging in and clocking in for <span style='color: rgba(184, 142, 86, 1);'>1</span> day can earn <span style='color: rgba(184, 142, 86, 1);'>{{clockin}}</span> DGC rewards; maximum of <span style='color: rgba(184, 142, 86, 1);'>{{citimes}}</span> Clock in rewards.": "",
@@ -783,7 +783,7 @@
   "of a website's sticky header": "",
   "Explain options trading": "",
   "if I'm familiar with buying and selling stocks": "",
-  "Grammar check":"",
+  "Grammar check": "",
   "rewrite it for better readability ": "",
   "Tell me a fun fact": "",
   "about the Roman Empire": "",
@@ -821,9 +821,9 @@
   "More info": "",
   "Visit": "Visit ",
   "official website": "",
-  "Code":"",
-  "Enter email address":"",
-  "Enter verification code":"",
+  "Code": "",
+  "Enter email address": "",
+  "Enter verification code": "",
   "Previous": "",
   "Finish": "",
   "Next": "",
@@ -855,19 +855,19 @@
   "Enter text to translate...": "",
   "Auto-detect": "",
   "Translate to": "",
-	"German": "",
-	"English": "",
-	"Spanish": "",
-	"French": "",
-	"Indonesian": "",
-	"Japanese": "",
-	"Korean": "",
-	"Portuguese": "",
-	"Russian": "",
-	"Thai": "",
-	"Turkish": "",
-	"Vietnamese": "",
-	"Chinese": "",
+  "German": "",
+  "English": "",
+  "Spanish": "",
+  "French": "",
+  "Indonesian": "",
+  "Japanese": "",
+  "Korean": "",
+  "Portuguese": "",
+  "Russian": "",
+  "Thai": "",
+  "Turkish": "",
+  "Vietnamese": "",
+  "Chinese": "",
   "Deep thinking,mathematical and writing abilities ≈ o3": "",
   "KYC verification is limited to once every 10 minutes, Please try again later.": "",
   "A single IP address can be used for a maximum of two KYC verifications": "",
@@ -961,4 +961,3 @@
   "Apply for API": "",
   "All Key": ""
 }
-
