--- a/src/lib/i18n/locales/es-ES/translation.json
+++ b/src/lib/i18n/locales/es-ES/translation.json
@@ -713,7 +713,7 @@
   "Strong writing ability, high stability": "Forte capacité d'écriture, haute stabilité",
   "Multimodal graphics and text, reasoning enhancement": "Gráficos y texto multimodal con mejora de razonamiento",
   "Using advanced reasoning": "Utilisant un raisonnement avancé",
-  "Good at fast coding and analysis": "Aptitude à la codage rapide et à l'analyse",
+  "Good at fast coding and analysis": "Lógica y código excelentes, manejo preciso de textos largos, contenido fiable",
   "Skilled in writing and generating ideas": "Habile en écriture et en génération d'idées",
   "Strong general capabilities, stable writing": "Fortes capacités générales, écriture stable",
   "Strongest in coding, suitable for complex tasks": "Le plus fort en codage, approprié pour les tâches complexes",
@@ -820,9 +820,9 @@
   "More info": "Plus d'informations",
   "Visit": "Visiter ",
   "official website": "site officiel",
-  "Code":"Code",
-  "Enter email address":"Entrez l'adresse e-mail",
-  "Enter verification code":"Entrez le code de vérification",
+  "Code": "Code",
+  "Enter email address": "Entrez l'adresse e-mail",
+  "Enter verification code": "Entrez le code de vérification",
   "Previous": "précédent",
   "Finish": "terminer",
   "Next": "suivant",
