--- a/src/lib/i18n/locales/id-ID/translation.json
+++ b/src/lib/i18n/locales/id-ID/translation.json
@@ -389,7 +389,7 @@
   "Per user, billed monthly": "Per pengguna, dibebankan bulanan",
   "Personalization": "Personalitas",
   "Plain text (.txt)": "Teks Murni (.txt)",
-  "Playground": "Tempat Bermain", 
+  "Playground": "Tempat Bermain",
   "Please complete the KYC verification !": "Silakan selesaikan verifikasi KYC !",
   "Please enter the password!": "Mohon masukkan kata sandi!",
   "Please install Ethereum wallet plugin, such as MetaMask.": "Mohon instal plugin dompet Ethereum, seperti MetaMask.",
@@ -714,7 +714,7 @@
   "Strong writing ability, high stability": "Kemampuan menulis yang kuat, stabilitas tinggi",
   "Multimodal graphics and text, reasoning enhancement": "Grafik dan teks multimodal dengan peningkatan penalaran",
   "Using advanced reasoning": "Menggunakan penalaran canggih",
-  "Good at fast coding and analysis": "Pandai dalam pengkodean cepat dan analisis",
+  "Good at fast coding and analysis": "Logika & koding unggul, pemrosesan teks panjang akurat, konten terpercaya",
   "Skilled in writing and generating ideas": "Terampil dalam menulis dan menghasilkan ide",
   "Strong general capabilities, stable writing": "Kemampuan umum yang kuat, penulisan yang stabil",
   "Strongest in coding, suitable for complex tasks": "Paling kuat dalam pengkodean, cocok untuk tugas kompleks",
@@ -821,9 +821,9 @@
   "More info": "Informasi Lebih Lanjut",
   "Visit": "Mengunjungi ",
   "official website": "situs web resmi",
-  "Code":"Kode",
-  "Enter email address":"Masukkan alamat email",
-  "Enter verification code":"Masukkan kode verifikasi",
+  "Code": "Kode",
+  "Enter email address": "Masukkan alamat email",
+  "Enter verification code": "Masukkan kode verifikasi",
   "Previous": "sebelumnya",
   "Finish": "selesai",
   "Next": "berikutnya",
