--- a/src/lib/i18n/locales/ja-JP/translation.json
+++ b/src/lib/i18n/locales/ja-JP/translation.json
@@ -4,7 +4,7 @@
   "{{webUIName}} Backend Required": "{{webUIName}} のバックエンドが必要です",
   "Deleted {{deleteModelTag}}": "{{deleteModelTag}} を削除しました",
   "Deleted {{tagName}}": "{{tagName}} を削除しました",
-  "Embedding model set to {{embedding_model}} ":" 埋め込みモデルが {{embedding_model}} に設定されました ",
+  "Embedding model set to {{embedding_model}} ": " 埋め込みモデルが {{embedding_model}} に設定されました ",
   "Enter {{role}} message here": "ここに {{role}} のメッセージを入力してください",
   "Enter model tag (e.g. {{modelTag}})": "モデルタグ（例：{{modelTag}}）を入力してください",
   "Model {{modelName}} has been successfully downloaded.": "モデル '{{modelName}}' は正常にダウンロードされました",
@@ -13,7 +13,7 @@
   "Model {{modelName}} already exists.": "モデル {{modelName}} は既に存在します",
   "Permission denied when accessing microphone: {{error}}": "マイクにアクセスする際に許可が拒否されました：{{error}}",
   "Pull {{searchValue}} from Ollama.com": "Ollama.comから {{searchValue}} を取得します ",
-  "Reranking model set to {{reranking_model}}":"再ランキングモデルが {{reranking_model}} に設定されました ",
+  "Reranking model set to {{reranking_model}}": "再ランキングモデルが {{reranking_model}} に設定されました ",
   "Scan for documents from {{path}}": "{{path}} からドキュメントをスキャンします",
   "Set embedding model (e.g. {{model}})": "埋め込みモデル（例：{{model}}）を設定します",
   "Set reranking model (e.g. {{model}})": "再ランキングモデル（例：{{model}}）を設定します",
@@ -22,7 +22,7 @@
   "Unknown File Type {{file_type}}, but accepting and treating as plain text": "不明なファイルタイプ {{file_type}} ですが、平文として受け入れて処理します",
   "'s', 'm', 'h', 'd', 'w' or '-1' for no expiration.": "期限がない場合は's'、'm'、'h'、'd'、'w'または '-1' を使用してください。",
   "(Beta)": "（ベータ版）",
-  "(e.g. sh webui.sh --api)":"（例えば sh webui.sh --api）",
+  "(e.g. sh webui.sh --api)": "（例えば sh webui.sh --api）",
   "(latest)": "（最新版）",
   "a user": "ユーザー",
   "About": "関於",
@@ -364,7 +364,7 @@
   "Ollama Base URL": "OllamaのベースURL",
   "Ollama Version": "Ollamaのバージョン",
   "On": "オン",
-  "Only":" ただし；唯一の；ただ～だけ ",
+  "Only": " ただし；唯一の；ただ～だけ ",
   "Only alphanumeric characters and hyphens are allowed in the command string.": "コマンド文字列には英数字とハイフンのみが許可されています。",
   "Oops! Hold tight! Your files are still in the processing oven. We're cooking them up to perfection. Please be patient and we'll let you know once they're ready.": "あれ！しばらくお待ちください！あなたのファイルはまだ処理中です。完璧な状態になるまで調整しています。少々お待ちください。準備ができたらお知らせします。",
   "Oops! Looks like the URL is invalid. Please double-check and try again.": "あれ！URL が無効のようです。もう一度確認してからやり直してください。",
@@ -714,7 +714,7 @@
   "Strong writing ability, high stability": "ライティング能力が高く、安定性が高い",
   "Multimodal graphics and text, reasoning enhancement": "マルチモーダルグラフィックとテキスト、推論機能強化",
   "Using advanced reasoning": "高度な推論を使用",
-  "Good at fast coding and analysis": "高速コーディングと分析に長けている",
+  "Good at fast coding and analysis": "論理・コード卓越、長文処理精密、信頼できる内容",
   "Skilled in writing and generating ideas": "ライティングとアイデア生成に熟練",
   "Strong general capabilities, stable writing": "総合能力が高く、安定したライティング",
   "Strongest in coding, suitable for complex tasks": "コーディングが最も強く、複雑なタスクに適しています",
@@ -773,7 +773,7 @@
   "II. Referral Reward": "II. 紹介報酬",
   "Wallet users who have completed KYC invite others to create wallets and complete KYC.": "KYC を完了したウォレットのユーザーは、他の人にウォレットを作成して KYC を完了するように誘導します。",
   "The number of people invited each day should not exceed {{ipeoples}}.": "1 日あたりの招待人数は {{ipeoples}} 人を超えてはいけません。",
-  "For every person invited, and if the invited person signs in continuously for three times, the inviter will receive a reward of <span style='color: rgba(184, 142, 86, 1);'>{{invite}}</span> DGC, The deadline for the activity is {{endtime}}.":" 招待した 1 人ごとに、招待された方が連続で 3 回ログインした場合、招待者は<span style='color: rgba(184, 142, 86, 1);'>{{invite}}</span> DGC の報酬を受け取ります, そのイベントの締め切り日は {{endtime}} です。",
+  "For every person invited, and if the invited person signs in continuously for three times, the inviter will receive a reward of <span style='color: rgba(184, 142, 86, 1);'>{{invite}}</span> DGC, The deadline for the activity is {{endtime}}.": " 招待した 1 人ごとに、招待された方が連続で 3 回ログインした場合、招待者は<span style='color: rgba(184, 142, 86, 1);'>{{invite}}</span> DGC の報酬を受け取ります, そのイベントの締め切り日は {{endtime}} です。",
   "III. Clock in Reward": "III. 出勤打刻報酬",
   "Check in reward is valid for <span style='color: rgba(184, 142, 86, 1);'>{{civalid}}</span> days after authentication is completed.": "認証完了後の<span style='color: rgba(184, 142, 86, 1);'>{{civalid}}</span>日間、出勤打刻報酬は有効です。",
   "Logging in and clocking in for <span style='color: rgba(184, 142, 86, 1);'>1</span> day can earn <span style='color: rgba(184, 142, 86, 1);'>{{clockin}}</span> DGC rewards; maximum of <span style='color: rgba(184, 142, 86, 1);'>{{citimes}}</span> Clock in rewards.": "<span style='color: rgba(184, 142, 86, 1);'>1</span> 日間ログインして出勤打刻を行うと、<span style='color: rgba(184, 142, 86, 1);'>{{clockin}}</span>個の DGC 報酬を獲得できます。出勤打刻報酬は最大<span style='color: rgba(184, 142, 86, 1);'>{{citimes}}</span>回までです。",
@@ -821,9 +821,9 @@
   "More info": "詳細情報",
   "Visit": "訪問する",
   "official website": "公式ウェブサイト",
-  "Code":"コード",
-  "Enter email address":"メールアドレスを入力してください",
-  "Enter verification code":"確認コードを入力してください",
+  "Code": "コード",
+  "Enter email address": "メールアドレスを入力してください",
+  "Enter verification code": "確認コードを入力してください",
   "Previous": "前の",
   "Finish": "終了",
   "Next": "次の",
@@ -836,8 +836,8 @@
   "have thought deeply": "深く考えた",
   "What does this picture mean?": "この絵は何を意味しますか？",
   "Explain this picture": "この絵を説明してください",
-  "What is the main idea of this picture?":"この絵の主要なアイデアは何ですか？",
-  "What does the symbol in the picture represent?":"絵の中の記号は何を表していますか？",
+  "What is the main idea of this picture?": "この絵の主要なアイデアは何ですか？",
+  "What does the symbol in the picture represent?": "絵の中の記号は何を表していますか？",
   "Help me solve problems": "問題を解決するのを手伝ってください",
   "Last for {{ time }} seconds": "{{time}} 秒間続きます",
   "Tool": "ツール",
