--- a/src/lib/i18n/locales/ko-KR/translation.json
+++ b/src/lib/i18n/locales/ko-KR/translation.json
@@ -714,7 +714,7 @@
   "Strong writing ability, high stability": "강력한 글쓰기 능력, 높은 안정성",
   "Multimodal graphics and text, reasoning enhancement": "멀티모달 그래픽 및 텍스트, 추론 기능 강화",
   "Using advanced reasoning": "고급 추론을 사용함",
-  "Good at fast coding and analysis": "빠른 코딩과 분석에 능함",
+  "Good at fast coding and analysis": "논리 및 코딩 탁월, 긴 텍스트 처리 정밀, 신뢰할 수 있는 콘텐츠",
   "Skilled in writing and generating ideas": "글쓰기와 아이디어 생성에 숙련",
   "Strong general capabilities, stable writing": "강력한 일반 능력, 안정적인 글쓰기",
   "Strongest in coding, suitable for complex tasks": "코딩 능력 가장 뛰어남, 복잡한 작업에 적합",
@@ -821,9 +821,9 @@
   "More info": "더 많은 정보",
   "Visit": "방문하다 ",
   "official website": "공식 웹사이트",
-  "Code":"코드",
-  "Enter email address":"이메일 주소를 입력하세요",
-  "Enter verification code":"확인 코드를 입력하세요",
+  "Code": "코드",
+  "Enter email address": "이메일 주소를 입력하세요",
+  "Enter verification code": "확인 코드를 입력하세요",
   "Previous": "이전의",
   "Finish": "완료",
   "Next": "다음의",
