--- a/src/lib/i18n/locales/th-TH/translation.json
+++ b/src/lib/i18n/locales/th-TH/translation.json
@@ -713,7 +713,7 @@
   "Strong writing ability, high stability": "ความสามารถในการเขียนดี มีเสถียรภาพสูง",
   "Multimodal graphics and text, reasoning enhancement": "กราฟิกและข้อความแบบมัลติโมดัล พร้อมการเสริมสร้างการให้เหตุผล",
   "Using advanced reasoning": "ใช้การให้เหตุผลขั้นสูง",
-  "Good at fast coding and analysis": "เก่งในการเขียนโค้ดเร็วและการวิเคราะห์",
+  "Good at fast coding and analysis": "ตรรกะและโค้ดดียอดเยี่ยม ประมวลผลข้อความยาวแม่นยำ เนื้อหาเชื่อถือได้",
   "Skilled in writing and generating ideas": "มีความเชี่ยวชาญในการเขียนและสร้างสรรค์แนวคิด",
   "Strong general capabilities, stable writing": "ความสามารถทั่วไปแข็งแกร่ง การเขียนมีเสถียรภาพ",
   "Strongest in coding, suitable for complex tasks": "เขียนโค้ดเก่งที่สุด เหมาะกับงานที่ซับซ้อน",
@@ -820,9 +820,9 @@
   "More info": "ข้อมูลเพิ่มเติม",
   "Visit": "ไปเยือน",
   "official website": "เว็บไซต์สำนักงาน",
-  "Code":"รหัส",
-  "Enter email address":"กรุณากรอกที่อยู่อีเมล",
-  "Enter verification code":"กรุณากรอกรหัสยืนยัน",
+  "Code": "รหัส",
+  "Enter email address": "กรุณากรอกที่อยู่อีเมล",
+  "Enter verification code": "กรุณากรอกรหัสยืนยัน",
   "Previous": "ก่อนหน้า",
   "Finish": "เสร็จสิ้น",
   "Next": "ต่อไป",
