--- a/src/lib/i18n/locales/tr-TR/translation.json
+++ b/src/lib/i18n/locales/tr-TR/translation.json
@@ -714,7 +714,7 @@
   "Strong writing ability, high stability": "Güçlü yazma yeteneği, yüksek kararlılık",
   "Multimodal graphics and text, reasoning enhancement": "Çok modlu grafikler ve metin, akıl yürütme geliştirme",
   "Using advanced reasoning": "Gelişmiş akıl yürütme kullanımı",
-  "Good at fast coding and analysis": "Hızlı kodlama ve analizde başarılı",
+  "Good at fast coding and analysis": "ตรรกะและโค้ดดียอดเยี่ยม ประมวลผลข้อความยาวแม่นยำ เนื้อหาเชื่อถือได้",
   "Skilled in writing and generating ideas": "Yazma ve fikir üretmede yetenekli",
   "Strong general capabilities, stable writing": "Güçlü genel yetenekler, kararlı yazım",
   "Strongest in coding, suitable for complex tasks": "Kodlamada en güçlü, karmaşık görevler için uygun",
@@ -741,7 +741,7 @@
   "Expired Total": "Süre Doldu Toplamı",
   "Renew Total": "Yenileme Toplamı",
   "User Report": "Kullanıcı Raporu",
-  "ROLE":"Rol",
+  "ROLE": "Rol",
   "KYC": "KYC",
   "Follow Twitter": "Twitter'ı Takip Et",
   "Follow TG Group": "TG Grubunu Takip Et",
@@ -821,9 +821,9 @@
   "More info": "Daha fazla bilgi",
   "Visit": "Ziyaret etmek ",
   "official website": "resmi web sitesi",
-  "Code":"Kod",
-  "Enter email address":"E-posta adresini girin",
-  "Enter verification code":"Doğrulama kodunu girin",
+  "Code": "Kod",
+  "Enter email address": "E-posta adresini girin",
+  "Enter verification code": "Doğrulama kodunu girin",
   "Previous": "önceki",
   "Finish": "bitirmek",
   "Next": "sonraki",
