--- a/src/lib/i18n/locales/vi-VN/translation.json
+++ b/src/lib/i18n/locales/vi-VN/translation.json
@@ -714,7 +714,7 @@
   "Strong writing ability, high stability": "Khả năng viết tốt, ổn định cao",
   "Multimodal graphics and text, reasoning enhancement": "Đồ họa và văn bản đa phương thức, nâng cao khả năng lập luận",
   "Using advanced reasoning": "Sử dụng suy luận nâng cao",
-  "Good at fast coding and analysis": "Giỏi lập trình nhanh và phân tích",
+  "Good at fast coding and analysis": "Tư duy lập trình xuất sắc, xử lý văn bản dài chính xác, nội dung tin cậy",
   "Skilled in writing and generating ideas": "Thành thạo viết lách và tạo ý tưởng",
   "Strong general capabilities, stable writing": "Năng lực tổng thể mạnh, viết ổn định",
   "Strongest in coding, suitable for complex tasks": "Mạnh nhất về coding, phù hợp tác vụ phức tạp",
@@ -812,9 +812,9 @@
   "More info": "Thêm thông tin",
   "Visit": "Đến thăm ",
   "official website": "trang web chính thức",
-  "Code":"Mã",
-  "Enter email address":"Nhập địa chỉ email",
-  "Enter verification code":"Nhập mã xác minh",
+  "Code": "Mã",
+  "Enter email address": "Nhập địa chỉ email",
+  "Enter verification code": "Nhập mã xác minh",
   "Previous": "trước đó",
   "Finish": "hoàn thành",
   "Next": "tiếp theo",
