--- a/src/lib/i18n/locales/zh-CN/translation.json
+++ b/src/lib/i18n/locales/zh-CN/translation.json
@@ -1,7 +1,7 @@
 {
   "'s', 'm', 'h', 'd', 'w' or '-1' for no expiration.": "'s'、'm'、'h'、'd'、'w' 来设置有效期，或使用 '-1' 表示无有效期）",
   "(Beta)": "（测试版）",
-  "(e.g. sh webui.sh --api)":"（例如 sh webui.sh --api）",
+  "(e.g. sh webui.sh --api)": "（例如 sh webui.sh --api）",
   "(latest)": "（最新的）",
   "{{modelName}} is thinking...": "{{modelName}} 正在响应……",
   "{{user}}'s Chats": "{{user}} 的聊天记录",
@@ -202,7 +202,7 @@
   "Email": "邮箱",
   "Embedding Model": "嵌入模型",
   "Embedding Model Engine": "嵌入模型引擎",
-  "Embedding model set to {{embedding_model}}":" 嵌入模型设置为 {{embedding_model}}",
+  "Embedding model set to {{embedding_model}}": " 嵌入模型设置为 {{embedding_model}}",
   "Enable Chat History": "启用聊天历史记录",
   "Enable New Sign Ups": "允许新用户注册",
   "Enabled": "已启用",
@@ -227,8 +227,8 @@
   "Enter stop sequence": "输入停止序列",
   "Enter the inviter id here": "在此处输入邀请者 ID",
   "Enter Top K": "输入 Top K 值",
-  "Enter URL (e.g. http://127.0.0.1:7860/)":" 输入网址（例如http://127.0.0.1:7860/）",
-  "Enter URL (e.g. http://localhost:11434)":" 输入网址（例如http://localhost:11434）",
+  "Enter URL (e.g. http://127.0.0.1:7860/)": " 输入网址（例如http://127.0.0.1:7860/）",
+  "Enter URL (e.g. http://localhost:11434)": " 输入网址（例如http://localhost:11434）",
   "Enter Your Email": "输入你的电子邮件",
   "Enter Your Full Name": "输入你的全名",
   "Enter Your Password": "输入你的密码",
@@ -288,7 +288,7 @@
   "Import Documents Mapping": "导入文档映射",
   "Import Modelfiles": "导入模型文件",
   "Import Prompts": "导入提示",
-  "Include --api flag when running stable-diffusion-webui":" 在运行 Stable Diffusion WebUI 时包含 --api 标志 ",
+  "Include --api flag when running stable-diffusion-webui": " 在运行 Stable Diffusion WebUI 时包含 --api 标志 ",
   "Input commands": "输入命令",
   "Interface": "界面；接口",
   "Invalid Tag": "无效标签",
@@ -423,8 +423,8 @@
   "Prompt Content": "提示内容",
   "Prompt suggestions": "提示建议",
   "Prompts": "提示（复数）",
-  "Pull {{searchValue}} from Ollama.com":"从Ollama.com上拉取 {{searchValue}}",
-  "Pull a model from Ollama.com":"从Ollama.com上拉取一个模型 ",
+  "Pull {{searchValue}} from Ollama.com": "从Ollama.com上拉取 {{searchValue}}",
+  "Pull a model from Ollama.com": "从Ollama.com上拉取一个模型 ",
   "Pull Progress": "拉取进度",
   "Purchase Digital Coins": "购买数字货币",
   "Query Params": "查询参数",
@@ -448,7 +448,7 @@
   "Request Mode": "请求模式",
   "Reranking Model": "重新排序模型",
   "Reranking model disabled": "重新排序模型已禁用",
-  "Reranking model set to {{reranking_model}}":" 重新排序模型设置为 {{reranking_model}}",
+  "Reranking model set to {{reranking_model}}": " 重新排序模型设置为 {{reranking_model}}",
   "Reset Vector Storage": "重置向量存储",
   "Response AutoCopy to Clipboard": "回复自动复制到剪贴板",
   "reward amount": "奖励金额",
@@ -713,7 +713,7 @@
   "Strong writing ability, high stability": "写作能力强，稳定性高",
   "Multimodal graphics and text, reasoning enhancement": "多模态图文，推理增强",
   "Using advanced reasoning": "使用高级推理",
-  "Good at fast coding and analysis": "擅长快速编码和分析",
+  "Good at fast coding and analysis": "逻辑编程卓越，长文处理精准，内容可靠",
   "Skilled in writing and generating ideas": "擅长写作和构思想法",
   "Strong general capabilities, stable writing": "通用能力强，写作稳定",
   "Strongest in coding, suitable for complex tasks": "编码最强，适合复杂任务",
@@ -772,7 +772,7 @@
   "II. Referral Reward(The activity lasts until January 2nd, 2025)": "II. 推荐奖励",
   "Wallet users who have completed KYC invite others to create wallets and complete KYC.": "完成KYC的钱包用户，邀请他人创建钱包且完成KYC",
   "The number of people invited each day should not exceed {{ipeoples}}.": "每天邀请人数不超过{{ipeoples}}人。",
-  "For every person invited, and if the invited person signs in continuously for three times, the inviter will receive a reward of <span style='color: rgba(184, 142, 86, 1);'>{{invite}}</span> DGC, The deadline for the activity is {{endtime}}.":"每邀请一个人，且被邀请者连续3 次签到，邀请者将获得 <span style='color: rgba(184, 142, 86, 1);'>{{invite}}</span>  DGC 的奖励, 活动截止日到{{endtime}}。",
+  "For every person invited, and if the invited person signs in continuously for three times, the inviter will receive a reward of <span style='color: rgba(184, 142, 86, 1);'>{{invite}}</span> DGC, The deadline for the activity is {{endtime}}.": "每邀请一个人，且被邀请者连续3 次签到，邀请者将获得 <span style='color: rgba(184, 142, 86, 1);'>{{invite}}</span>  DGC 的奖励, 活动截止日到{{endtime}}。",
   "III. Clock in Reward": "III. 签到奖励",
   "Check in reward is valid for <span style='color: rgba(184, 142, 86, 1);'>{{civalid}}</span> days after authentication is completed.": "签到奖励在完成认证后的<span style='color: rgba(184, 142, 86, 1);'>{{civalid}}</span>天内有效。",
   "Logging in and clocking in for <span style='color: rgba(184, 142, 86, 1);'>1</span> day can earn <span style='color: rgba(184, 142, 86, 1);'>{{clockin}}</span> DGC rewards; maximum of <span style='color: rgba(184, 142, 86, 1);'>{{citimes}}</span> Clock in rewards.": "每日登录并签到可赚取<span style='color: rgba(184, 142, 86, 1);'>{{clockin}}</span>个 DGC 奖励；最多可获得<span style='color: rgba(184, 142, 86, 1);'>{{citimes}}</span>次签到奖励。",
@@ -820,9 +820,9 @@
   "More info": "更多信息",
   "Visit": "访问",
   "official website": "官网",
-  "Code":"验证码",
-  "Enter email address":"输入电子邮件地址",
-  "Enter verification code":"输入验证码",
+  "Code": "验证码",
+  "Enter email address": "输入电子邮件地址",
+  "Enter verification code": "输入验证码",
   "Previous": "上一步",
   "Finish": "完成",
   "Next": "下一步",
@@ -854,19 +854,19 @@
   "Enter text to translate...": "输入要翻译的文本...",
   "Auto-detect": "自动检测",
   "Translate to": "翻译为",
-	"German": "德语",
-	"English": "英语",
-	"Spanish": "西班牙语",
-	"French": "法语",
-	"Indonesian": "印尼语",
-	"Japanese": "日语",
-	"Korean": "韩语",
-	"Portuguese": "葡萄牙语",
-	"Russian": "俄语",
-	"Thai": "泰语",
-	"Turkish": "土耳其语",
-	"Vietnamese": "越南语",
-	"Chinese": "汉语",
+  "German": "德语",
+  "English": "英语",
+  "Spanish": "西班牙语",
+  "French": "法语",
+  "Indonesian": "印尼语",
+  "Japanese": "日语",
+  "Korean": "韩语",
+  "Portuguese": "葡萄牙语",
+  "Russian": "俄语",
+  "Thai": "泰语",
+  "Turkish": "土耳其语",
+  "Vietnamese": "越南语",
+  "Chinese": "汉语",
   "Deep thinking,mathematical and writing abilities ≈ o3": "深度思考，在数学、创意写作等任务性能上比肩o3",
   "KYC verification is limited to once every 10 minutes, Please try again later.": "KYC 认证每 10 分钟只能进行一次。请稍后再试。",
   "A single IP address can be used for a maximum of two KYC verifications": "单个 IP 地址最多可用于两次 KYC 认证。",
