feat:change model and fix bug

--- a/src/lib/i18n/locales/en-US/translation.json
+++ b/src/lib/i18n/locales/en-US/translation.json
@@ -704,7 +704,7 @@
   "Multimodal graphics and text, suitable for daily tasks": "",
   "Strong language skills": "",
   "Enhanced reasoning, suitable for complex tasks": "",
-  "Lightweight general-purpose model with fast response speed": "",
+  "Lightweight general-purpose model with fast response speed": "High-intelligence general-purpose model with superior performance",
   "Multimodal graphics and text, suitable for most tasks": "",
   "Well-suited for handling daily tasks": "",
   "Strong writing and coding skills": "",
