--- a/src/lib/i18n/locales/es-ES/translation.json
+++ b/src/lib/i18n/locales/es-ES/translation.json
@@ -703,7 +703,7 @@
   "Multimodal graphics and text, suitable for daily tasks": "Gráficos y texto multimodal, adecuado para tareas diarias",
   "Strong language skills": "Fortes compétences linguistiques",
   "Enhanced reasoning, suitable for complex tasks": "Raisonnement renforcé, approprié pour des tâches complexes",
-  "Lightweight general-purpose model with fast response speed": "Modèle généraliste léger avec une vitesse de réponse rapide",
+  "Lightweight general-purpose model with fast response speed": "Modelo de propósito general de alta inteligencia con rendimiento superior",
   "Multimodal graphics and text, suitable for most tasks": "Gráficos y texto multimodal, adecuado para la mayoría de tareas",
   "Well-suited for handling daily tasks": "Très approprié pour gérer les tâches quotidiennes",
   "Strong writing and coding skills": "Fortes compétences en écriture et en codage",
