--- a/src/lib/i18n/locales/id-ID/translation.json
+++ b/src/lib/i18n/locales/id-ID/translation.json
@@ -704,7 +704,7 @@
   "Multimodal graphics and text, suitable for daily tasks": "Grafik dan teks multimodal, cocok untuk tugas sehari-hari",
   "Strong language skills": "Kemampuan Bahasa yang Kuat",
   "Enhanced reasoning, suitable for complex tasks": "Penalaran yang ditingkatkan, cocok untuk tugas-tugas kompleks",
-  "Lightweight general-purpose model with fast response speed": "Model umum ringan, kecepatan respons cepat",
+  "Lightweight general-purpose model with fast response speed": "Model serbaguna cerdas tinggi dengan performa unggul",
   "Multimodal graphics and text, suitable for most tasks": "Grafik dan teks multimodal, cocok untuk sebagian besar tugas",
   "Well-suited for handling daily tasks": "Sangat cocok untuk menangani tugas harian",
   "Strong writing and coding skills": "Kemampuan menulis dan pengkodean yang kuat",
