--- a/src/lib/i18n/locales/ja-JP/translation.json
+++ b/src/lib/i18n/locales/ja-JP/translation.json
@@ -704,7 +704,7 @@
   "Multimodal graphics and text, suitable for daily tasks": "マルチモーダルなグラフィックとテキスト、日常業務に適しています",
   "Strong language skills": "すぐれたげんごのうりょく",
   "Enhanced reasoning, suitable for complex tasks": "強化された推理能力、複雑なタスクに適しています",
-  "Lightweight general-purpose model with fast response speed": "軽量汎用モデルで、応答速度が速いです",
+  "Lightweight general-purpose model with fast response speed": "優れた性能を持つ高知能汎用モデル",
   "Multimodal graphics and text, suitable for most tasks": "マルチモーダルなグラフィックとテキスト、ほとんどの業務に適しています",
   "Well-suited for handling daily tasks": "日常的なタスクの処理に適しています",
   "Strong writing and coding skills": "優れたライティングとコーディング能力",
