--- a/src/lib/i18n/locales/pt-PT/translation.json
+++ b/src/lib/i18n/locales/pt-PT/translation.json
@@ -704,7 +704,7 @@
   "Multimodal graphics and text, suitable for daily tasks": "Gráficos e texto multimodal, adequado para tarefas diárias",
   "Strong language skills": "Forte habilidade linguística",
   "Enhanced reasoning, suitable for complex tasks": "Raciocínio aprimorado, adequado para tarefas complexas",
-  "Lightweight general-purpose model with fast response speed": "Modelo genérico leve com alta velocidade de resposta",
+  "Lightweight general-purpose model with fast response speed": "Modelo de uso geral de alta inteligência com desempenho superior",
   "Multimodal graphics and text, suitable for most tasks": "Gráficos e texto multimodal, adequado para a maioria das tarefas",
   "Well-suited for handling daily tasks": "Muito adequado para lidar com tarefas diárias",
   "Strong writing and coding skills": "Fortes habilidades de escrita e codificação",
@@ -821,9 +821,9 @@
   "More info": "Mais informações",
   "Visit": "Visitar ",
   "official website": "site oficial",
-  "Code":"Código",
-  "Enter email address":"Insira o endereço de e-mail",
-  "Enter verification code":"Insira o código de verificação",
+  "Code": "Código",
+  "Enter email address": "Insira o endereço de e-mail",
+  "Enter verification code": "Insira o código de verificação",
   "Previous": "anterior",
   "Finish": "terminar",
   "Next": "seguinte",
