--- a/src/lib/i18n/locales/ru-RU/translation.json
+++ b/src/lib/i18n/locales/ru-RU/translation.json
@@ -703,7 +703,7 @@
   "Multimodal graphics and text, suitable for daily tasks": "Мультимодальная графика и текст, подходит для повседневных задач",
   "Strong language skills": "Прочные языковые навыки",
   "Enhanced reasoning, suitable for complex tasks": "Укрепенное рассуждение, подходящее для сложных задач",
-  "Lightweight general-purpose model with fast response speed": "Легковесная универсальная модель с высокой скоростью отклика",
+  "Lightweight general-purpose model with fast response speed": "Высокоинтеллектуальная универсальная модель с превосходной производительностью",
   "Multimodal graphics and text, suitable for most tasks": "Мультимодальная графика и текст, подходит для большинства задач",
   "Well-suited for handling daily tasks": "Хорошо подходит для выполнения ежедневных задач",
   "Strong writing and coding skills": "Сильные навыки письма и программирования",
@@ -820,9 +820,9 @@
   "More info": "Больше информации",
   "Visit": "Посетить ",
   "official website": "официальный сайт",
-  "Code":"Код",
-  "Enter email address":"Введите адрес электронной почты",
-  "Enter verification code":"Введите код подтверждения",
+  "Code": "Код",
+  "Enter email address": "Введите адрес электронной почты",
+  "Enter verification code": "Введите код подтверждения",
   "Previous": "предыдущий",
   "Finish": "закончить",
   "Next": "следующий",
@@ -835,8 +835,8 @@
   "have thought deeply": "глубоко подумал",
   "What does this picture mean?": "Что означает это изображение?",
   "Explain this picture": "Объясните это изображение",
-  "What is the main idea of this picture?":"Какова главная идея этого изображения?",
-  "What does the symbol in the picture represent?":"Что представляет собой символ на изображении?",
+  "What is the main idea of this picture?": "Какова главная идея этого изображения?",
+  "What does the symbol in the picture represent?": "Что представляет собой символ на изображении?",
   "Help me solve problems": "Помогите мне решить проблемы",
   "Last for {{ time }} seconds": "Длится {{ time }} секунд",
   "Tool": "Инструмент",
