--- a/src/lib/i18n/locales/th-TH/translation.json
+++ b/src/lib/i18n/locales/th-TH/translation.json
@@ -703,7 +703,7 @@
   "Multimodal graphics and text, suitable for daily tasks": "กราฟิกและข้อความแบบมัลติโมดัล เหมาะสำหรับงานประจำวัน",
   "Strong language skills": "ความสามารถภาษาที่แข็งแกร่ง",
   "Enhanced reasoning, suitable for complex tasks": "การให้เหตุผลที่ได้รับการเสริมสร้าง เหมาะสำหรับงานที่ซับซ้อน",
-  "Lightweight general-purpose model with fast response speed": "โมเดลอเนกประสงค์น้ำหนักเบาที่ตอบสนองเร็ว",
+  "Lightweight general-purpose model with fast response speed": "โมเดลอเนกประสงค์ที่มีความฉลาดสูงพร้อมประสิทธิภาพที่ยอดเยี่ยม",
   "Multimodal graphics and text, suitable for most tasks": "กราฟิกและข้อความแบบมัลติโมดัล เหมาะสำหรับงานส่วนใหญ่",
   "Well-suited for handling daily tasks": "เหมาะสำหรับการจัดการงานประจำวัน",
   "Strong writing and coding skills": "ทักษะการเขียนและเขียนโค้ดแข็งแกร่ง",
