--- a/src/lib/i18n/locales/tr-TR/translation.json
+++ b/src/lib/i18n/locales/tr-TR/translation.json
@@ -704,7 +704,7 @@
   "Multimodal graphics and text, suitable for daily tasks": "Çok modlu grafikler ve metin, günlük görevler için uygundur",
   "Strong language skills": "Güçlü Dil Becerileri",
   "Enhanced reasoning, suitable for complex tasks": "Güçlendirilmiş mantık, karmaşık görevler için uygundur",
-  "Lightweight general-purpose model with fast response speed": "Hafif genel amaçlı model, hızlı yanıt verme kabiliyetine sahiptir",
+  "Lightweight general-purpose model with fast response speed": "Üstün performansa sahip yüksek zekalı genel amaçlı model",
   "Multimodal graphics and text, suitable for most tasks": "Çok modlu grafikler ve metin, çoğu görev için uygundur",
   "Well-suited for handling daily tasks": "Günlük görevleri işlemek için ideal",
   "Strong writing and coding skills": "Güçlü yazma ve kodlama becerileri",
