--- a/src/lib/i18n/locales/vi-VN/translation.json
+++ b/src/lib/i18n/locales/vi-VN/translation.json
@@ -704,7 +704,7 @@
   "Multimodal graphics and text, suitable for daily tasks": "Đồ họa và văn bản đa phương thức, phù hợp cho công việc hàng ngày",
   "Strong language skills": "Khả năng ngôn ngữ mạnh mẽ",
   "Enhanced reasoning, suitable for complex tasks": "Lý luận được tăng cường, phù hợp với các nhiệm vụ phức tạp",
-  "Lightweight general-purpose model with fast response speed": "Mô hình đa năng nhẹ với tốc độ phản hồi nhanh",
+  "Lightweight general-purpose model with fast response speed": "Mô hình đa năng thông minh cao với hiệu suất vượt trội",
   "Multimodal graphics and text, suitable for most tasks": "Đồ họa và văn bản đa phương thức, phù hợp với hầu hết công việc",
   "Well-suited for handling daily tasks": "Phù hợp xử lý công việc hàng ngày",
   "Strong writing and coding skills": "Mạnh về viết lách và lập trình",
