--- a/src/lib/i18n/locales/zh-CN/translation.json
+++ b/src/lib/i18n/locales/zh-CN/translation.json
@@ -703,7 +703,7 @@
   "Multimodal graphics and text, suitable for daily tasks": "多模态图文，适合日常任务",
   "Strong language skills": "语言能力强",
   "Enhanced reasoning, suitable for complex tasks": "加强推理，适合复杂任务",
-  "Lightweight general-purpose model with fast response speed": "轻量通用模型，响应速度快",
+  "Lightweight general-purpose model with fast response speed": "高智能通用模型，性能表现卓越",
   "Multimodal graphics and text, suitable for most tasks": "多模态图文，适用于大多数任务",
   "Well-suited for handling daily tasks": "适合处理日常任务",
   "Strong writing and coding skills": "强写作与编码",
