--- a/src/lib/i18n/locales/ko-KR/translation.json
+++ b/src/lib/i18n/locales/ko-KR/translation.json
@@ -704,7 +704,7 @@
   "Multimodal graphics and text, suitable for daily tasks": "멀티모달 그래픽 및 텍스트, 일상 작업에 적합",
   "Strong language skills": "뛰어난 언어 능력",
   "Enhanced reasoning, suitable for complex tasks": "강화된 추론, 복잡한 과제에 적합합니다",
-  "Lightweight general-purpose model with fast response speed": "경량 다목적 모델로 응답 속도가 빠릅니다",
+  "Lightweight general-purpose model with fast response speed": "탁월한 성능을 갖춘 고지능 범용 모델",
   "Multimodal graphics and text, suitable for most tasks": "멀티모달 그래픽 및 텍스트, 대부분의 작업에 적합",
   "Well-suited for handling daily tasks": "일상 작업 처리에 매우 적합",
   "Strong writing and coding skills": "강력한 글쓰기 및 코딩 능력",
