feat:Optimized the application code and styles

--- a/src/lib/i18n/locales/zh-CN/translation.json
+++ b/src/lib/i18n/locales/zh-CN/translation.json
@@ -267,7 +267,7 @@
   "General": "通用",
   "General Settings": "通用设置",
   "Generation Info": "生成信息",
-  "Get Now!": "立即获取！",
+  "Get Now!": "立即获取",
   "Get Now...": "现在获取……",
   "Get smarter replies, upload files and pictures, and enjoy more features.": "获得更智能的回复，上传文件和图片，并享受更多功能。",
   "Good Response": "良好的回复",
